# kairo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  ruff.toml
src/kairo/: __init__.py  cli.py  database.py  models.py  tui.py  utils.py
src/kairo/screens/: __init__.py  add_task.py  confirm_delete.py  edit_task.py  filter_project.py  filter_select.py  filter_tag.py  task_detail.py  task_form.py  weekly_plan.py  weekly_report.py
